glib-macros/tests/clone_compiletest/17-clone-upgrade-or-panic-first.stderr
error: upgrade failure attribute must not be followed by any other attributes. Found 1 more attribute
 --> tests/clone_compiletest/17-clone-upgrade-or-panic-first.rs:4:32
  |
4 |     clone!(#[upgrade_or_panic] #[strong] v, move || {println!("foo");});
  |                                ^^^^^^^^^
